add-header-frame

--- a/Frame/index.html
+++ b/Frame/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Frame </title>
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <title>FRAME </title>
 </head>
+
 <body>
-    
+    <!-- Start header -->
+    <div class="header">
+        <div class="header-box">
+            <p>Lorem ipsum dolor <br> 
+                sit amet. this and <br>
+                is a test iam king <br></p>
+            <div class="div-butten">
+                <a href="#" class="div-butten1">Get Them Naw</a>
+                <a href="#" class="div-butten2">See Features</a>
+            </div>
+        </div>
+    </div>
+    <!-- End header -->
+
+
+    <script src="./assets/js/javascript.js"></script>
 </body>
+
 </html>
