add-section-services

--- a/Frame/index.html
+++ b/Frame/index.html
@@ -1,30 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="./assets/css/style.css" />
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
+        />
+        <title>FRAME</title>
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <title>FRAME </title>
-</head>
-
-<body>
-    <!-- Start header -->
-    <div class="header">
-        <div class="header-box">
-            <p>Lorem ipsum dolor <br> 
-                sit amet. this and <br>
-                is a test iam king <br></p>
-            <div class="div-butten">
-                <a href="#" class="div-butten1">Get Them Naw</a>
-                <a href="#" class="div-butten2">See Features</a>
+    <body>
+        <!-- Start header -->
+        <header class="header">
+            <div class="header-box">
+                <p>
+                    Lorem ipsum dolor <br />
+                    sit amet. this and <br />
+                    is a test iam king <br />
+                </p>
+                <div class="div-butten">
+                    <a href="#" class="div-butten1">Get Them Naw</a>
+                    <a href="#" class="div-butten2">See Features</a>
+                </div>
             </div>
-        </div>
-    </div>
-    <!-- End header -->
+        </header>
+        <!-- End header -->
+        <!-- start services -->
+        <section>
+            <section class="services">
+                <div class="services-box">
+                    <div class="service-content">
+                        <i class="bi bi-phone services-top-icon"></i>
+                        <h3>this is a test</h3>
+                        <p>
+                            Lorem ipsum dolor, sit amet consectetur adipisicing
+                            elit. Aperiam quaerat in ipsa facilis. Perferendis
+                            natus quas dignissimos earum minus dolores eveniet
+                            iste non ut suscipit nobis atque voluptates, optio
+                            tenetur? Lorem ipsum, dolor sit amet consectetur
+                            adipisicing elit.
+                        </p>
+                        <a href="">
+                            learn more
+                            <i class="bi bi-chevron-double-right icon-a"></i>
+                        </a>
+                    </div>
+                    <div class="service-content">
+                        <i class="bi bi-lightbulb services-top-icon"></i>
+                        <h3>this is a test</h3>
+                        <p>
+                            Lorem ipsum dolor, sit amet consectetur adipisicing
+                            elit. Aperiam quaerat in ipsa facilis. Perferendis
+                            natus quas dignissimos earum minus dolores eveniet
+                            iste non ut suscipit nobis atque voluptates, optio
+                            tenetur? Lorem ipsum, dolor sit amet consectetur
+                            adipisicing elit.
+                        </p>
+                        <a href="">
+                            learn more
+                            <i class="bi bi-chevron-double-right icon-a"></i>
+                        </a>
+                    </div>
+                    <div class="service-content">
+                        <i class="bi bi-coin services-top-icon"></i>
+                        <h3>this is a test</h3>
+                        <p>
+                            Lorem ipsum dolor, sit amet consectetur adipisicing
+                            elit. Aperiam quaerat in ipsa facilis. Perferendis
+                            natus quas dignissimos earum minus dolores eveniet
+                            iste non ut suscipit nobis atque voluptates, optio
+                            tenetur? Lorem ipsum, dolor sit amet consectetur
+                            adipisicing elit.
+                        </p>
+                        <a href="">
+                            learn more
+                            <i class="bi bi-chevron-double-right icon-a"></i>
+                        </a>
+                    </div>
+                </div>
+            </section>
+        </section>
 
+        <!-- end services   -->
 
-    <script src="./assets/js/javascript.js"></script>
-</body>
-
+        <script src="./assets/js/javascript.js"></script>
+    </body>
 </html>
