add-feature-frame

--- a/Frame/index.html
+++ b/Frame/index.html
@@ -82,8 +82,79 @@
                 </div>
             </section>
         </section>
-
         <!-- end services   -->
+        <!-- start featuer -->
+<section class="feature">
+  <div class="featuer-box">
+    <!-- سکشن بالایی -->
+    <div class="sec-top">
+      <h1>Feature</h1>
+      <span class="line"></span>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa neque
+        deserunt eveniet quisquam eum, maxime voluptate iste consectetur dolores
+        quibusdam dolorum modi vero repellendus exercitationem corporis dicta
+        eaque. Est, sed?
+      </p>
+    </div>
+
+    <!-- آیتم اول (عکس چپ / متن راست) -->
+    <div class="feature-iteam">
+      <div class="feature-iteam-img">
+        <img src="./assets/Img/img_showcase_1.jpg" alt="" />
+      </div>
+      <div class="featurer-list-iteam">
+        <h3>Lorem ipsum dolor sit amet</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+          eos ipsum reiciendis consectetur! Necessitatibus, animi.
+        </p>
+        <p><i class="bi bi-check-lg"></i>Lorem ipsum dolor sit amet consectetur.</p>
+        <p><i class="bi bi-check-lg"></i>Lorem ipsum dolor sit amet consectetur.</p>
+        <p><i class="bi bi-check-lg"></i>Lorem ipsum dolor sit amet consectetur.</p>
+        <p><i class="bi bi-check-lg"></i>Lorem ipsum dolor sit amet consectetur.</p>
+      </div>
+    </div>
+
+    <!-- آیتم دوم (عکس راست / متن چپ) -->
+    <div class="feature-iteam reverse">
+      <div class="feature-iteam-img">
+        <img src="./assets/Img/img_showcase_2.jpg" alt="" />
+      </div>
+      <div class="featurer-list-iteam">
+        <h3>Lorem ipsum dolor sit amet</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+          eos ipsum reiciendis consectetur! Necessitatibus, animi.
+        </p>
+        <p><i class="bi bi-check-lg"></i>Lorem ipsum dolor sit amet consectetur.</p>
+        <p><i class="bi bi-check-lg"></i>Lorem ipsum dolor sit amet consectetur.</p>
+        <p><i class="bi bi-check-lg"></i>Lorem ipsum dolor sit amet consectetur.</p>
+        <p><i class="bi bi-check-lg"></i>Lorem ipsum dolor sit amet consectetur.</p>
+      </div>
+    </div>
+
+    <!-- آیتم سوم (دوباره عکس چپ / متن راست) -->
+    <div class="feature-iteam">
+      <div class="feature-iteam-img">
+        <img src="./assets/Img/img_showcase_1.jpg" alt="" />
+      </div>
+      <div class="featurer-list-iteam">
+        <h3>Lorem ipsum dolor sit amet</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+          eos ipsum reiciendis consectetur! Necessitatibus, animi.
+        </p>
+        <p><i class="bi bi-check-lg"></i>Lorem ipsum dolor sit amet consectetur.</p>
+        <p><i class="bi bi-check-lg"></i>Lorem ipsum dolor sit amet consectetur.</p>
+        <p><i class="bi bi-check-lg"></i>Lorem ipsum dolor sit amet consectetur.</p>
+        <p><i class="bi bi-check-lg"></i>Lorem ipsum dolor sit amet consectetur.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+        <!-- end featuer -->
 
         <script src="./assets/js/javascript.js"></script>
     </body>
