add-frame-pians

--- a/Frame/index.html
+++ b/Frame/index.html
@@ -84,77 +84,181 @@
         </section>
         <!-- end services   -->
         <!-- start featuer -->
-<section class="feature">
-  <div class="featuer-box">
-    <!-- سکشن بالایی -->
-    <div class="sec-top">
-      <h1>Feature</h1>
-      <span class="line"></span>
-      <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa neque
-        deserunt eveniet quisquam eum, maxime voluptate iste consectetur dolores
-        quibusdam dolorum modi vero repellendus exercitationem corporis dicta
-        eaque. Est, sed?
-      </p>
-    </div>
+        <section class="feature">
+            <div class="featuer-box">
+                <!-- سکشن بالایی -->
+                <div class="sec-top">
+                    <h1>Feature</h1>
+                    <span class="line"></span>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing
+                        elit. Culpa neque deserunt eveniet quisquam eum, maxime
+                        voluptate iste consectetur dolores quibusdam dolorum
+                        modi vero repellendus exercitationem corporis dicta
+                        eaque. Est, sed?
+                    </p>
+                </div>
 
-    <!-- آیتم اول (عکس چپ / متن راست) -->
-    <div class="feature-iteam">
-      <div class="feature-iteam-img">
-        <img src="./assets/Img/img_showcase_1.jpg" alt="" />
-      </div>
-      <div class="featurer-list-iteam">
-        <h3>Lorem ipsum dolor sit amet</h3>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
-          eos ipsum reiciendis consectetur! Necessitatibus, animi.
-        </p>
-        <p><i class="bi bi-check-lg"></i>Lorem ipsum dolor sit amet consectetur.</p>
-        <p><i class="bi bi-check-lg"></i>Lorem ipsum dolor sit amet consectetur.</p>
-        <p><i class="bi bi-check-lg"></i>Lorem ipsum dolor sit amet consectetur.</p>
-        <p><i class="bi bi-check-lg"></i>Lorem ipsum dolor sit amet consectetur.</p>
-      </div>
-    </div>
+                <!-- آیتم اول (عکس چپ / متن راست) -->
+                <div class="feature-iteam">
+                    <div class="feature-iteam-img">
+                        <img src="./assets/Img/img_showcase_1.jpg" alt="" />
+                    </div>
+                    <div class="featurer-list-iteam">
+                        <h3>Lorem ipsum dolor sit amet</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Voluptates eos ipsum reiciendis consectetur!
+                            Necessitatibus, animi.
+                        </p>
+                        <p>
+                            <i class="bi bi-check-lg"></i>Lorem ipsum dolor sit
+                            amet consectetur.
+                        </p>
+                        <p>
+                            <i class="bi bi-check-lg"></i>Lorem ipsum dolor sit
+                            amet consectetur.
+                        </p>
+                        <p>
+                            <i class="bi bi-check-lg"></i>Lorem ipsum dolor sit
+                            amet consectetur.
+                        </p>
+                        <p>
+                            <i class="bi bi-check-lg"></i>Lorem ipsum dolor sit
+                            amet consectetur.
+                        </p>
+                    </div>
+                </div>
 
-    <!-- آیتم دوم (عکس راست / متن چپ) -->
-    <div class="feature-iteam reverse">
-      <div class="feature-iteam-img">
-        <img src="./assets/Img/img_showcase_2.jpg" alt="" />
-      </div>
-      <div class="featurer-list-iteam">
-        <h3>Lorem ipsum dolor sit amet</h3>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
-          eos ipsum reiciendis consectetur! Necessitatibus, animi.
-        </p>
-        <p><i class="bi bi-check-lg"></i>Lorem ipsum dolor sit amet consectetur.</p>
-        <p><i class="bi bi-check-lg"></i>Lorem ipsum dolor sit amet consectetur.</p>
-        <p><i class="bi bi-check-lg"></i>Lorem ipsum dolor sit amet consectetur.</p>
-        <p><i class="bi bi-check-lg"></i>Lorem ipsum dolor sit amet consectetur.</p>
-      </div>
-    </div>
+                <!-- آیتم دوم (عکس راست / متن چپ) -->
+                <div class="feature-iteam reverse">
+                    <div class="feature-iteam-img">
+                        <img src="./assets/Img/img_showcase_2.jpg" alt="" />
+                    </div>
+                    <div class="featurer-list-iteam">
+                        <h3>Lorem ipsum dolor sit amet</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Voluptates eos ipsum reiciendis consectetur!
+                            Necessitatibus, animi.
+                        </p>
+                        <p>
+                            <i class="bi bi-check-lg"></i>Lorem ipsum dolor sit
+                            amet consectetur.
+                        </p>
+                        <p>
+                            <i class="bi bi-check-lg"></i>Lorem ipsum dolor sit
+                            amet consectetur.
+                        </p>
+                        <p>
+                            <i class="bi bi-check-lg"></i>Lorem ipsum dolor sit
+                            amet consectetur.
+                        </p>
+                        <p>
+                            <i class="bi bi-check-lg"></i>Lorem ipsum dolor sit
+                            amet consectetur.
+                        </p>
+                    </div>
+                </div>
 
-    <!-- آیتم سوم (دوباره عکس چپ / متن راست) -->
-    <div class="feature-iteam">
-      <div class="feature-iteam-img">
-        <img src="./assets/Img/img_showcase_1.jpg" alt="" />
-      </div>
-      <div class="featurer-list-iteam">
-        <h3>Lorem ipsum dolor sit amet</h3>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
-          eos ipsum reiciendis consectetur! Necessitatibus, animi.
-        </p>
-        <p><i class="bi bi-check-lg"></i>Lorem ipsum dolor sit amet consectetur.</p>
-        <p><i class="bi bi-check-lg"></i>Lorem ipsum dolor sit amet consectetur.</p>
-        <p><i class="bi bi-check-lg"></i>Lorem ipsum dolor sit amet consectetur.</p>
-        <p><i class="bi bi-check-lg"></i>Lorem ipsum dolor sit amet consectetur.</p>
-      </div>
-    </div>
-  </div>
-</section>
-
+                <!-- آیتم سوم (دوباره عکس چپ / متن راست) -->
+                <div class="feature-iteam">
+                    <div class="feature-iteam-img">
+                        <img src="./assets/Img/img_showcase_1.jpg" alt="" />
+                    </div>
+                    <div class="featurer-list-iteam">
+                        <h3>Lorem ipsum dolor sit amet</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Voluptates eos ipsum reiciendis consectetur!
+                            Necessitatibus, animi.
+                        </p>
+                        <p>
+                            <i class="bi bi-check-lg"></i>Lorem ipsum dolor sit
+                            amet consectetur.
+                        </p>
+                        <p>
+                            <i class="bi bi-check-lg"></i>Lorem ipsum dolor sit
+                            amet consectetur.
+                        </p>
+                        <p>
+                            <i class="bi bi-check-lg"></i>Lorem ipsum dolor sit
+                            amet consectetur.
+                        </p>
+                        <p>
+                            <i class="bi bi-check-lg"></i>Lorem ipsum dolor sit
+                            amet consectetur.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- end featuer -->
+        <!-- start plans -->
+        <section class="plans">
+            <div class="plans-box">
+                <div class="sec-top">
+                    <h1>Our Pricing Plans</h1>
+                    <span class="line"></span>
+                    <p style="font-size: 21px">
+                        Choose the perfect plan for your business, starting from
+                        just $30 to $150 per month.
+                    </p>
+                </div>
+
+                <div class="price-plans">
+                    <!-- Card 1 -->
+                    <div class="plan-card">
+                        <h2>Basic Plan</h2>
+                        <p class="price">$30 / month</p>
+                        <p class="desc">
+                            Ideal for individuals and small projects.
+                        </p>
+                        <ul>
+                            <li>✔ Access to core features</li>
+                            <li>✔ Email support</li>
+                            <li>✔ 5 GB storage</li>
+                            <li>✔ Secure connection</li>
+                        </ul>
+                        <button class="btn">Choose Plan</button>
+                    </div>
+
+                    <!-- Card 2 -->
+                    <div class="plan-card popular">
+                        <h2>Pro Plan</h2>
+                        <p class="price">$80 / month</p>
+                        <p class="desc">
+                            Perfect for growing teams and startups.
+                        </p>
+                        <ul>
+                            <li>✔ Everything in Basic</li>
+                            <li>✔ Priority support</li>
+                            <li>✔ 50 GB storage</li>
+                            <li>✔ Advanced analytics</li>
+                        </ul>
+                        <button class="btn">Choose Plan</button>
+                    </div>
+
+                    <!-- Card 3 -->
+                    <div class="plan-card">
+                        <h2>Premium Plan</h2>
+                        <p class="price">$150 / month</p>
+                        <p class="desc">
+                            Best for enterprises and large businesses.
+                        </p>
+                        <ul>
+                            <li>✔ Everything in Pro</li>
+                            <li>✔ Dedicated support</li>
+                            <li>✔ Unlimited storage</li>
+                            <li>✔ Custom integrations</li>
+                        </ul>
+                        <button class="btn">Choose Plan</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- end plans -->
 
         <script src="./assets/js/javascript.js"></script>
     </body>
