--- a/Frame/index.html
+++ b/Frame/index.html
@@ -133,7 +133,7 @@
                 <!-- آیتم دوم (عکس راست / متن چپ) -->
                 <div class="feature-iteam reverse">
                     <div class="feature-iteam-img">
-                        <img src="./assets/Img/img_showcase_2.jpg" alt="" />
+                        <img src="./assets/Img/laptop_1.jpg" alt="" />
                     </div>
                     <div class="featurer-list-iteam">
                         <h3>Lorem ipsum dolor sit amet</h3>
@@ -257,8 +257,116 @@
                 </div>
             </div>
         </section>
-
         <!-- end plans -->
+        <!-- start Comments -->
+        <section class="testimonials">
+            <div class="testimonials-box">
+                <div class="sec-top">
+                    <h1>What Our Customers Say</h1>
+                    <span class="line"></span>
+                    <p>Hear from our happy clients who love our services.</p>
+                </div>
+
+                <div class="testimonial-cards">
+                    <!-- Card 1 -->
+                    <div class="testimonial-card">
+                        <div class="avatar">
+                            <img
+                                src="./assets/Img/person_2.jpg"
+                                alt="John Doe"
+                            />
+                        </div>
+                        <p class="comment">
+                            "Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit. Proin vel urna nec justo suscipit."
+                        </p>
+                        <div class="rating">★★★★☆</div>
+                        <p class="name">John Doe</p>
+                    </div>
+
+                    <!-- Card 2 -->
+                    <div class="testimonial-card">
+                        <div class="avatar">
+                            <img
+                                src="./assets/Img/person_3.jpg"
+                                alt="Jane Smith"
+                            />
+                        </div>
+                        <p class="comment">
+                            "Excellent service and friendly support team. Highly
+                            recommended!"
+                        </p>
+                        <div class="rating">★★★★★</div>
+                        <p class="name">Jane Smith</p>
+                    </div>
+
+                    <!-- Card 3 -->
+                    <div class="testimonial-card">
+                        <div class="avatar">
+                            <img
+                                src="./assets/Img/person_3.jpg"
+                                alt="Alice Johnson"
+                            />
+                        </div>
+                        <p class="comment">
+                            "Affordable and professional. I am very satisfied
+                            with the results."
+                        </p>
+                        <div class="rating">★★★★☆</div>
+                        <p class="name">Alice Johnson</p>
+                    </div>
+
+                    <!-- Card 4 -->
+                    <div class="testimonial-card">
+                        <div class="avatar">
+                            <img
+                                src="./assets/Img/person_2.jpg"
+                                alt="Michael Lee"
+                            />
+                        </div>
+                        <p class="comment">
+                            "Great experience, fast response, and top quality
+                            service."
+                        </p>
+                        <div class="rating">★★★★★</div>
+                        <p class="name">Michael Lee</p>
+                    </div>
+
+                    <!-- Card 5 -->
+                    <div class="testimonial-card">
+                        <div class="avatar">
+                            <img
+                                src="./assets/Img/person_1.jpg"
+                                alt="Emily Davis"
+                            />
+                        </div>
+                        <p class="comment">
+                            "Very reliable and professional team. Would
+                            recommend to anyone."
+                        </p>
+                        <div class="rating">★★★★☆</div>
+                        <p class="name">Emily Davis</p>
+                    </div>
+
+                    <!-- Card 6 -->
+                    <div class="testimonial-card">
+                        <div class="avatar">
+                            <img
+                                src="./assets/Img/person_1.jpg"
+                                alt="Robert Brown"
+                            />
+                        </div>
+                        <p class="comment">
+                            "Amazing support and excellent results. Totally
+                            satisfied!"
+                        </p>
+                        <div class="rating">★★★★★</div>
+                        <p class="name">Robert Brown</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- end Comments -->
 
         <script src="./assets/js/javascript.js"></script>
     </body>
