--- a/Frame/index.html
+++ b/Frame/index.html
@@ -367,6 +367,21 @@
             </div>
         </section>
         <!-- end Comments -->
+        <!-- start join -->
+        <section class="join">
+            <div class="join-box">
+                <h2>join with over 100k Members</h2>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Inventore enim, recusandae nesciunt esse perferendis
+                    voluptatum quasi qui repellat eum id nihil similique? Lorem
+                    ipsum, dolor sit amet consectetur adipisicing elit. Tenetur
+                    commodi est ex eaque?
+                </p>
+                <a href=""> Get Srarter </a>
+            </div>
+        </section>
+        <!-- end join -->
 
         <script src="./assets/js/javascript.js"></script>
     </body>
